ITTalent - 3º Hackathon - Correção

--- a/.github/workflows/hackathon.yml
+++ b/.github/workflows/hackathon.yml
@@ -1,50 +1,32 @@
-name: Build and Deploy
+name: Upload Website
+
 on:
   push:
     branches:
       - main
-permissions:
-  contents: write
-  pages: write
+
 jobs:
-  run-eslint:
+  Deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Configure Node
-        uses: actions/setup-node@v1
+      - name: Setup node
+        uses: actions/setup-node@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build static file
+        run: npm run build
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          node-version: "20"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-      - name: Run Install
-        run: |
-          npm ci
-
-      - name: Run ESLint 🔎
-        run: npm run lint
-
-  build-and-deploy:
-    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
-
-      - name: Configure Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: "20"
-
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-        run: |
-          npm ci
-          npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build # The folder the action should deploy.
-          branch: gh-pages
-          token: ${{ secrets.GITHUB_TOKEN }} # Usar o token de acesso para autenticação
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync ./build s3://{3hackathonittalent}
